# 21CMMC_lite

./: .pre-commit-config.yaml  CHANGELOG.rst  README.md  pyproject.toml
paper/: checklist.md
src/py21cmmclite/: _util.py  coeval.py  lightcone.py  likelihood.py  sampler.py  util.py
src/py21cmmclite/data/Forests/xqr30/dz0pt2/: inv_tau_dect_z5pt0.npy  inv_tau_dect_z5pt2.npy  inv_tau_dect_z5pt4.npy  inv_tau_dect_z5pt6.npy  inv_tau_dect_z5pt8.npy  inv_tau_dect_z6pt0.npy  inv_tau_dect_z6pt2.npy  inv_tau_limit_z5pt6.npy  inv_tau_limit_z5pt8.npy  inv_tau_limit_z6pt0.npy  inv_tau_limit_z6pt2.npy
